@@ -54,7 +54,7 @@ void fpm_request_accepting(void)
 	fpm_scoreboard_proc_release(proc);
 
 	/* idle++, active-- */
-	fpm_scoreboard_update_commit(1, -1, 0, 0, 0, 0, 0, FPM_SCOREBOARD_ACTION_INC, NULL);
+	fpm_scoreboard_update_commit(1, -1, 0, 0, 0, 0, 0, 0, FPM_SCOREBOARD_ACTION_INC, NULL);
 }
 
 void fpm_request_reading_headers(void)
@@ -98,7 +98,7 @@ void fpm_request_reading_headers(void)
 	fpm_scoreboard_proc_release(proc);
 
 	/* idle--, active++, request++ */
-	fpm_scoreboard_update_commit(-1, 1, 0, 0, 1, 0, 0, FPM_SCOREBOARD_ACTION_INC, NULL);
+	fpm_scoreboard_update_commit(-1, 1, 0, 0, 1, 0, 0, 0, FPM_SCOREBOARD_ACTION_INC, NULL);
 }
 
 void fpm_request_info(void)
@@ -199,6 +199,9 @@ void fpm_request_end(void)
 #endif
 	proc->memory = memory;
 	fpm_scoreboard_proc_release(proc);
+
+	/* memory_peak */
+	fpm_scoreboard_update_commit(0, 0, 0, 0, 0, 0, 0, proc->memory, FPM_SCOREBOARD_ACTION_SET, NULL);
 }
 
 void fpm_request_finished(void)
