@@ -99,7 +99,7 @@ void fpm_scoreboard_update_begin(struct fpm_scoreboard_s *scoreboard) /* {{{ */
 
 void fpm_scoreboard_update_commit(
 		int idle, int active, int lq, int lq_len, int requests, int max_children_reached,
-		int slow_rq, int action, struct fpm_scoreboard_s *scoreboard) /* {{{ */
+		int slow_rq, size_t memory_peak, int action, struct fpm_scoreboard_s *scoreboard) /* {{{ */
 {
 	scoreboard = fpm_scoreboard_get_for_update(scoreboard);
 	if (!scoreboard) {
@@ -169,6 +169,9 @@ void fpm_scoreboard_update_commit(
 	if (scoreboard->active > scoreboard->active_max) {
 		scoreboard->active_max = scoreboard->active;
 	}
+	if (scoreboard->memory_peak < memory_peak) {
+		scoreboard->memory_peak = memory_peak;
+	}
 
 	fpm_unlock(scoreboard->lock);
 }
@@ -177,11 +180,11 @@ void fpm_scoreboard_update_commit(
 
 void fpm_scoreboard_update(
 		int idle, int active, int lq, int lq_len, int requests, int max_children_reached,
-		int slow_rq, int action, struct fpm_scoreboard_s *scoreboard) /* {{{ */
+		int slow_rq, size_t memory_peak, int action, struct fpm_scoreboard_s *scoreboard) /* {{{ */
 {
 	fpm_scoreboard_update_begin(scoreboard);
 	fpm_scoreboard_update_commit(
-			idle, active, lq, lq_len, requests, max_children_reached, slow_rq, action, scoreboard);
+			idle, active, lq, lq_len, requests, max_children_reached, slow_rq, memory_peak, action, scoreboard);
 }
 /* }}} */
 
