@@ -35,6 +35,7 @@ class Status
         'max active processes' => '\d+',
         'max children reached' => '\d+',
         'slow requests'        => '\d+',
+        'memory peak'          => '\d+',
     ];
 
     /**
@@ -266,6 +267,9 @@ class Status
             "# HELP phpfpm_slow_requests The number of requests that exceeded your 'request_slowlog_timeout' value\.\n" .
             "# TYPE phpfpm_slow_requests counter\n" .
             "phpfpm_slow_requests " . $fields['slow requests'] . "\n" .
+            "# HELP phpfpm_memory_peak The memory usage peak since FPM has started\.\n" .
+            "# TYPE phpfpm_memory_peak gauge\n" .
+            "phpfpm_memory_peak " . $fields['memory peak'] . "\n" .
             "# EOF)\n";
 
         if (!preg_match($pattern, $body)) {
